--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
 	<p>Git + GitHub</p>
+	<h2>Hello</h2>
+	<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi fugiat dignissimos, laudantium sit perspiciatis minus labore blanditiis distinctio sed non!</p>
 </body>
 </html>
